<resources>
    <string name="hello">Hello World, MyTeamManagerActivity!</string>
    <string name="app_name">My Team Manager</string>
    <string name="enter_team_name_message">Enter your team name</string>
    <string name="next">Next</string>
    <string name="player_file_title">Add player</string>
    <string name="name">First name</string>
    <string name="last_name">Last name</string>
    <string name="save_and_next">Save and next</string>
    <string name="done">Done</string>
    <string name="enter_player_info">Add the team players. Are any of them already present in your phonebook?</string>
    <string name="start">Start</string>
    <string-array name="positions">
        <item>Goalkeeper</item>
        <item>Defender</item>
        <item>Midfielder</item>
        <item>Forward</item>
    </string-array>
    <string-array name="home_page_list">
        <item>Roster</item>
        <item>Fixtures and results</item>
        <item>Team appointments</item>
    </string-array>
    <string name="label_roster">Roster</string>
    <string name="label_matches">Matches</string>
    <string name="label_training">Trainings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="title_add_player">Add player</string>
    <string name="title_team_roster">Team roster</string>
    <string name="email">Email</string>
    <string name="email_optional">Email (optional)</string>
    <string name="phone">Phone number</string>
    <string name="phone_optional">Phone number (optional)</string>
    <string name="additional_info">Additional info</string>
    <string name="birth_date_label">Birth date</string>
    <string name="birth_date_label_optional">Birth date (optional)</string>
    <string name="label_shirt_number">Shirt number</string>
    <string name="label_opponent">Opponent</string>
    <string-array name="array_home_away">
        <item>Home</item>
        <item>Away</item>
    </string-array>
    <string name="label_date">Date</string>
    <string name="label_date_optional">Date (optional)</string>
    <string name="label_time_optional">Time (optional)</string>
    <string name="label_location">Location</string>
    <string name="label_day">Day</string>
    <string name="label_time">Time</string>
    <string name="label_arrival_time">Arrival time</string>
    <string name="label_note_optional">Note (optional)</string>
    <string name="title_add_match">Add new match</string>
    <string name="hint_time_field">hh:mm</string>
    <string name="label_match">Match</string>
    <string name="label_practice">Training</string>
    <string-array name="repeat_event">
        <item>Don\'t repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="label_checkbox_canceled">Canceled</string>
    <string name="label_match_canceled">Canceled (mark the match as canceled)</string>
    <string name="label_event_canceled">Canceled (mark the event as canceled)</string>
    <string name="label_event">Event</string>
    <string name="label_repeat">Repeat event</string>
    <string name="label_end_repeat_date">Until</string>
    <string name="title_events">Team appointments</string>
    <string name="title_matches">Matches</string>
    <string name="title_add_event">Add event</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="alert_general_confirmation_msg">Do you want do delete the data?</string>
    <string name="alert_general_confirmation_title">Info</string>
    <string name="label_date_semicoloumn">Date: %1$s</string>
    <string name="label_location_semicoloumn">Location: %1$s</string>
    <string name="label_arrival_time_semicoloumn">Arrival time: %1$s</string>
    <string name="label_time_semicoloumn">Time: %1$s</string>
    <string name="label_note_semicoloumn">Note: %1$s</string>
    <string name="enter_result">Enter the result</string>
    <string name="edit">Edit</string>
    <string name="alert_event_confirmation_msg">Would you like to delete only this event or all future events in the series also?</string>
    <string name="alert_delete_event_conf_btn1">Only this</string>
    <string name="alert_delete_event_conf_btn2">All in the series</string>
    <string name="alert_delete_event_conf_btn3">Cancel</string>
    <string name="tab_convocation_roster_list_title">Choose player</string>
    <string name="btn_convocation">Calls-up (%1$s) </string>
    <string name="tab_convocation_convocated_player_title">Called</string>
    <string name="title_convocations">Calls-up (%1$d)</string>
    <string name="title_convocations_with_numbers">%1$dTOT - %2$dG - %3$dD - %4$dM - %5$dA</string>
    <string name="btn_total_convocations">Tot called up: %1$d</string>
    <string name="btn_gk">Gk: %1$d</string>
    <string name="btn_def">Def: %1$d</string>
    <string name="btn_mid">Mid: %1$d</string>
    <string name="btn_att">Att: %1$d</string>
    <string name="btn_lineup">Choose your team line-up</string>
    <string name="btn_click_to_choose_player">Click to choose</string>
    <string name="btn_configure_substitutes">Edit substitutes</string>
    <string name="label_on_the_bench"><b>On the bench:</b></string>
    <string name="label_played_game">Games:</string>
    <string name="label_scored_goals">Goals:</string>
    <string name="abbr_gk">Gk</string>
    <string name="abbr_def">Def</string>
    <string name="abbr_mid">Mid</string>
    <string name="abbr_att">Att</string>
    <string name="msg_no_players_to_select_for_lineup">No players to select. Add players to your roster or to your calls-up</string>
    <string name="dialog_please_wait_loading_data">Loading data. Please wait...</string>
    <string name=" dialog_please_wait_writing_data">Writing data. Please wait...</string>
    <string name="delete_all">Delete all</string>
    <string name="alert_delete_all_events_confirmation_msg">All the events will be deleted: do you confirm?</string>
    <string name="label_players_not_selected"></string>
    <string name="label_not_selected">Players not selected:</string>
    <string name="title_substitutes">On the bench</string>
    <string name="label_next_match">Next match</string>
    <string name="label_next_training">Next training</string>
    <string name="label_stats">Stats</string>
    <string name="msg_no_next_match_available">Go to &quot;Matches&quot; to add it</string>
    <string name="msg_no_next_training_available">Go to &quot;Trainings&quot; to add it</string>
    <string name="label_points_short">Pts</string>
    <string name="label_played_short">P</string>
    <string name="label_won_short">W</string>
    <string name="label_draw_short">D</string>
    <string name="label_lost_short">L</string>
    <string name="label_goal_scored_short">F</string>
    <string name="label_goal_against_short">A</string>
    <string name="btn_add_event">Add training</string>
    <string name="btn_add_match">Add match</string>
    <string name="title_match">Match</string>
    <string name="alert_enter_valid_result">You must enter a valid result for the match</string>
    <string name="label_string_conovcated_semicoloumn">Called players:</string>
    <string name="dialog_facebook_activation">Would you like to post matches, calls-up, results and other team news on Facebook? You need to be admin of the Facebook page to do that.</string>
    <string name="dialog_facebook_choose_your_page_title">Choose your team page</string>
    <string name="settings_title_facebook">Facebook</string>
    <string name="settings_facebook_activation_summary">Enable posting news, match and calls-up on your team Facebook page</string>
    <string name="settings_facebook_activation_label">Post on Facebook</string>
    <string name="label_menu_settings">Settings</string>
    <string name="btn_scorer">Edit scorers</string>
    <string-array name="goals">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="title_scorers">Scorers</string>
    <string name="label_scorer">Goals:</string>
    <string name="label_unknown_player">Unknown player</string>
    <string name="share">Share</string>
    <string name="hint_post_match">Message about the match</string>
    <string name="send">Send</string>
    <string name="title_post_match_facebook">Share on Facebook</string>
    <string name="toast_facebook_status_posted">The message has been sent</string>
    <string name="dialog_waiting_sending_data">Sending data...please wait</string>
    <string name="toast_facebook_pages_error">An error occurred retrieving the pages from Facebook</string>
    <string name="toast_facebook_error_post_status">An error occurred posting the match to Facebook</string>
    <string name="label_hangout_place_and_time_optional"> Where and when we meet (optional)</string>
    <string name="label_hangout_place_and_time">Where and when we meet: %1$s</string>
    <string name="dialog_facebook_post_convocation">Would you like to post the calls-up on your Facebook page?</string>
    <string name="btn_edit_substitutions">Match substitutions</string>
    <string name="label_substitutions_in">In</string>
    <string name="label_substitutions_out">Out</string>
    <string name="title_substitutions">Match substitutions</string>
    <string name="label_replace">&lt; &gt;</string>
    <string name="settings_title_about">About MyTeamManager</string>
    <string name="settings_contact_us_label">Contact us</string>
    <string name="settings_contact_us_summary">Send us an email to report a problem or to suggest improvements or new features </string>
    <string name="settings_title_version">Version 1.0</string>
    <string name="settings_version_summary">Copyright 2013 Emanuele Pecorari</string>
	<string name="title_help_roster"><b>Roster</b></string>
	<string name="text_help_roster">In this section you can manage your players: add them, edit their profile, see their statistics</string>
	<string name="title_help_matches"><b>Matches</b></string>
	<string name="text_help_matches">Configure the list of your team\'s matches, the dates and time. Add your personal notes, the calls-up, where to meet, the lineup and the substitutions, the result and the scorers. Share the calls-up and the details of the match with your players on Facebook, or send them an email or a SMS</string>
	<string name="title_help_training"><b>Training</b></string>
	<string name="text_help_training">Manage your training sessions, the date and the time. Save your note for each session</string>
	<string name="title_help_message"><b>Message</b></string>
	<string name="text_help_message">Communicate with your players via SMS or email.</string>
	<string name="title_help_facebook"><b>Facebook</b></string>
	<string name="text_help_facebook">Post your messages on your team Facebook page to share whatever you want with your players</string>
	<string name="settings_title_share">Share the application</string>
	<string name="settings_share_summary">Share MyTeamManager with your friends</string>
	<string name="label_signup_full_name">Full name</string>
	<string name="label_signup_email">Email</string>
	<string name="label_signup_pasword">Password</string>
	<string name="label_signup_button_register">Register new account</string>
	<string name="label_login">Login</string>
	<string name="label_create_new_account">Create a new account</string>
	<string name="label_login_facebook">Login with Facebook</string>
</resources>