<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="facebook"
        android:title="@string/settings_title_facebook" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="FACEBOOK_ACTIVATION"
            android:summary="@string/settings_facebook_activation_summary"
            android:title="@string/settings_facebook_activation_label" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="about"
        android:title="@string/settings_title_about" >
        <Preference
            android:summary="@string/settings_contact_us_summary"
            android:title="@string/settings_contact_us_label" >
            <intent android:action="com.myteammanager.CONTACTUS" />
        </Preference>
        <Preference
            android:summary="@string/settings_share_summary"
            android:title="@string/settings_title_share" >
            <intent android:action="com.myteammanager.SHAREAPP" />
        </Preference>
        <Preference
            android:summary="@string/settings_version_summary"
            android:title="@string/settings_title_version" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>