<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        

        <!-- Login Form -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:hint="@string/label_signup_email"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/label_signup_pasword"
                android:inputType="textVisiblePassword"
                android:singleLine="true" />
            <!-- Register Button -->

            <Button
                android:id="@+id/btnLogin"
                style="@style/MyTeamManagerButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/label_login" />
            

  			<Button
                android:id="@+id/btnLoginFacebook"
                style="@style/MyTeamManagerButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/label_login_facebook" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/homepage_button"
                android:drawableRight="@drawable/ic_list_more"
                android:text="@string/label_create_new_account"
                android:textColor="#555555"
                android:textSize="16dp" />
        </LinearLayout>
        <!-- Registration Form Ends -->

    </RelativeLayout>

</ScrollView>