<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
 
       
  
 
        <!-- Registration Form -->
        <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          >
          <EditText android:id="@+id/editTextFullnameSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:hint="@string/label_signup_full_name"
                android:layout_marginBottom="5dip"/>
          <EditText android:id="@+id/editTextEmailSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/label_signup_email"
                android:singleLine="true"
                android:layout_marginBottom="5dip"/>
          <EditText android:id="@+id/editTextPasswordSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_signup_pasword"
                android:inputType="textVisiblePassword"
                android:singleLine="true"
                android:layout_marginTop="5dip"/>
          <!-- Register Button -->
          <Button android:id="@+id/btnSignup"
                style="@style/MyTeamManagerButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/label_signup_button_register"/>
 
        </LinearLayout>
        <!-- Registration Form Ends -->
  </RelativeLayout>
</ScrollView>