<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewEnterPlayerInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/enter_player_info"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
            <Button
        android:id="@+id/buttonYes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewEnterPlayerInfo"
        android:layout_below="@+id/textViewEnterPlayerInfo"
        android:layout_marginTop="40dp"
        android:layout_marginRight="5dp"
        android:text="@string/label_yes" />
    
        <Button
        android:id="@+id/buttonNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewEnterPlayerInfo"
        android:layout_below="@+id/buttonYes"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/label_no" />

</RelativeLayout>